--- a/index.html
+++ b/index.html
@@ -8,142 +8,142 @@
 </head>
 <body>
     <!-- first container -->
-    <div class="container">
+    <div class="container container-md container-sm">
         <div class="row">
-            <div class="col-1">
+            <div class="col-1 col-md-1 col-sm-1">
                 <div class="card row justify-center align-item-center bg-blu">
                     1 col
                 </div>
             </div>
-            <div class="col-1">
+            <div class="col-1 col-md-1 col-sm-1">
                 <div class="card row justify-center align-item-center bg-blu">
                     1 col
                 </div>
             </div>
-            <div class="col-1">
+            <div class="col-1 col-md-1 col-sm-1">
                 <div class="card row justify-center align-item-center bg-blu">
                     1 col
                 </div>
             </div>
-            <div class="col-1">
+            <div class="col-1 col-md-1 col-sm-1">
                 <div class="card row justify-center align-item-center bg-blu">
                     1 col
                 </div>
             </div>
-            <div class="col-1">
+            <div class="col-1 col-md-1 col-sm-1">
                 <div class="card row justify-center align-item-center bg-blu">
                     1 col
                 </div>
             </div>
-            <div class="col-1">
+            <div class="col-1 col-md-1 col-sm-1">
                 <div class="card row justify-center align-item-center bg-blu">
                     1 col
                 </div>
             </div>
-            <div class="col-1">
+            <div class="col-1 col-md-1 col-sm-1">
                 <div class="card row justify-center align-item-center bg-blu">
                     1 col
                 </div>
             </div>
-            <div class="col-1">
+            <div class="col-1 col-md-1 col-sm-1">
                 <div class="card row justify-center align-item-center bg-blu">
                     1 col
                 </div>
             </div>
-            <div class="col-1">
+            <div class="col-1 col-md-1 col-sm-1">
                 <div class="card row justify-center align-item-center bg-blu">
                     1 col
                 </div>
             </div>
-            <div class="col-1">
+            <div class="col-1 col-md-1 col-sm-1">
                 <div class="card row justify-center align-item-center bg-blu">
                     1 col
                 </div>
             </div>
-            <div class="col-1">
+            <div class="col-1 col-md-1 col-sm-1">
                 <div class="card row justify-center align-item-center bg-blu">
                     1 col
                 </div>
             </div>
-            <div class="col-1">
+            <div class="col-1 col-md-1 col-sm-1">
                 <div class="card row justify-center align-item-center bg-blu">
                     1 col
                 </div>
             </div>
-            <div class="col-2">
+            <div class="col-2 col-md-2 col-sm-2">
                 <div class="card row justify-center align-item-center bg-blu">
                     col
                 </div>
             </div>
-            <div class="col-5">
+            <div class="col-5 col-md-5 col-sm-5">
                 <div class="card row justify-center align-item-center bg-blu">
                     col
                 </div>
             </div>
-            <div class="col-5">
+            <div class="col-5 col-md-5 col-sm-5">
                 <div class="card row justify-center align-item-center bg-blu">
                     col
                 </div>
             </div>
-            <div class="col-12">
+            <div class="col-12 col-md-12 col-sm-12">
                 <div class="card row justify-center align-item-center bg-blu">
                     12 col
                 </div>
             </div>
-            <div class="col-8">
+            <div class="col-8 col-md-8 col-sm-8">
                 <div class="card row justify-center align-item-center bg-blu">
                     8 col
                 </div>
             </div>
-            <div class="col-2">
+            <div class="col-2 col-md-2 col-sm-2">
                 <div class="card row justify-center align-item-center bg-blu">
                     2 col
                 </div>
             </div>
-            <div class="col-2">
+            <div class="col-2 col-md-2 col-sm-2">
                 <div class="card row justify-center align-item-center bg-blu">
                     2 col
                 </div>
             </div>
-            <div class="col-1">
+            <div class="col-1 col-md-1 col-sm-1">
                 <div class="card row justify-center align-item-center bg-blu">
                     1 col
                 </div>
             </div>
-            <div class="col-2">
+            <div class="col-2 col-md-2 col-sm-2">
                 <div class="card row justify-center align-item-center bg-blu">
                     2 col
                 </div>
             </div>
-            <div class="col-2">
+            <div class="col-2 col-md-2 col-sm-2">
                 <div class="card row justify-center align-item-center bg-blu">
                     2 col
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-6 col-md-6 col-sm-6">
                 <div class="card row justify-center align-item-center bg-blu">
                     6 col
                 </div>
             </div>
-            <div class="col-1">
+            <div class="col-1 col-md-1 col-sm-1">
                 <div class="card row justify-center align-item-center bg-blu">
                     1 col
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-6 col-md-6 col-sm-6">
                 <div class="card">
                     <div class="row-short pt-05 pl-2">
-                        <div class="col-2">
+                        <div class="col-2 col-md-2 col-sm-2">
                             <div class="card-green row justify-center align-item-center">
                                 Nested 2 col
                             </div>
                         </div>
-                        <div class="col-2">
+                        <div class="col-2 col-md-2 col-sm-2">
                             <div class="card-green row justify-center align-item-center">
                                 Nested 2 col
                             </div>
                         </div>
-                        <div class="col-8">
+                        <div class="col-8 col-md-8 col-sm-8">
                             <div class="card-green row justify-center align-item-center">
                                 Nested 8 col
                             </div>
@@ -151,15 +151,15 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-6 col-md-6 col-sm-6">
                 <div class="card">
                     <div class="row-short pt-05 pl-2">
-                        <div class="col-6">
+                        <div class="col-6 col-md-6 col-sm-6">
                             <div class="card-green row justify-center align-item-center">
                                 Nested 6 col
                             </div>
                         </div>
-                        <div class="col-6">
+                        <div class="col-6 col-md-6 col-sm-6">
                             <div class="card-green row justify-center align-item-center">
                                 Nested 6 col
                             </div>
@@ -171,45 +171,45 @@
     <!-- /first container -->
 
     <!-- second container -->
-    <div class="container">
+    <div class="container container-md container-sm">
         <div class="row">
-            <div class="col-12">
+            <div class="col-12 col-md-12 col-sm-12">
                 <div class="card"></div>
             </div>
-            <div class="col-1">
+            <div class="col-1 col-md-1 col-sm-1">
                 <div class="card"></div>
             </div>
-            <div class="col-11">
+            <div class="col-11 col-md-11 col-sm-11">
                 <div class="card"></div>
             </div>
-            <div class="col-2">
+            <div class="col-2 col-md-2 col-sm-2">
                 <div class="card"></div>
             </div>
-            <div class="col-10">
+            <div class="col-10 col-md-10 col-sm-10">
                 <div class="card"></div>
             </div>
-            <div class="col-3">
+            <div class="col-3 col-md-3 col-sm-3">
                 <div class="card"></div>
             </div>
-            <div class="col-9">
+            <div class="col-9 col-md-9 col-sm-9">
                 <div class="card"></div>
             </div>
-            <div class="col-4">
+            <div class="col-4 col-md-4 col-sm-4">
                 <div class="card"></div>
             </div>
-            <div class="col-8">
+            <div class="col-8 col-md-8 col-sm-8">
                 <div class="card"></div>
             </div>
-            <div class="col-5">
+            <div class="col-5 col-md-5 col-sm-5">
                 <div class="card"></div>
             </div>
-            <div class="col-7">
+            <div class="col-7 col-md-7 col-sm-7">
                 <div class="card"></div>
             </div>
-            <div class="col-6">
+            <div class="col-6 col-md-6 col-sm-6">
                 <div class="card"></div>
             </div>
-            <div class="col-6">
+            <div class="col-6 col-md-6 col-sm-6">
                 <div class="card"></div>
             </div>
         </div>
@@ -217,40 +217,40 @@
     <!-- /second container -->
 
     <!-- third container -->
-    <div class="container">
+    <div class="container container-md container-sm">
         <h1>Offset</h1>
         <div class="row">
-            <div class="col-1 col-offset-11">
+            <div class="col-1 col-md-1 col-sm-1 col-offset-11 col-offset-md-11 col-offset-sm-11">
                 <div class="card"></div>
             </div>
-            <div class="col-2 col-offset-10">
+            <div class="col-2 col-md-2 col-sm-2 col-offset-10 col-offset-md-10 col-offset-sm-10">
                 <div class="card"></div>
             </div>
-            <div class="col-3 col-offset-9">
+            <div class="col-3 col-md-3 col-sm-3 col-offset-9 col-offset-md-9 col-offset-sm-9">
                 <div class="card"></div>
             </div>
-            <div class="col-4 col-offset-8">
+            <div class="col-4 col-md-4 col-sm-4 col-offset-8 col-offset-md-8 col-offset-sm-8">
                 <div class="card"></div>
             </div>
-            <div class="col-5 col-offset-7">
+            <div class="col-5 col-md-5 col-sm-5 col-offset-7 col-offset-md-7 col-offset-sm-7">
                 <div class="card"></div>
             </div>
-            <div class="col-6 col-offset-6">
+            <div class="col-6 col-md-6 col-sm-6 col-offset-6 col-offset-md-6 col-offset-sm-6">
                 <div class="card"></div>
             </div>
-            <div class="col-7 col-offset-5">
+            <div class="col-7 col-md-7 col-sm-7 col-offset-5 col-offset-md-5 col-offset-sm-5">
                 <div class="card"></div>
             </div>
-            <div class="col-8 col-offset-4">
+            <div class="col-8 col-md-8 col-sm-8 col-offset-4 col-offset-md-4 col-offset-sm-4">
                 <div class="card"></div>
             </div>
-            <div class="col-9 col-offset-3">
+            <div class="col-9 col-md-9 col-sm-9 col-offset-3 col-offset-md-3 col-offset-sm-3">
                 <div class="card"></div>
             </div>
-            <div class="col-10 col-offset-2">
+            <div class="col-10 col-md-10 col-sm-10 col-offset-2 col-offset-md-2 col-offset-sm-2">
                 <div class="card"></div>
             </div>
-            <div class="col-11 col-offset-1">
+            <div class="col-11 col-md-11 col-sm-11 col-offset-1 col-offset-md-1 col-offset-sm-1">
                 <div class="card"></div>
             </div>
         </div>
